# vnpt_ai_hackathon_meetmate

./: .gitignore  CHANGELOG_20251208.md  README.md  et --hard abc1234  requirements.txt  supabase.dump
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  clear_marketing_leads.sql  env.example.txt  marketing_leads.sql  pyproject.toml  render.yaml  requirements.txt  seed_demo.py  seed_demo.sql
backend/alembic/: env.py
backend/alembic/versions/: add_project_description_objective.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  realtime_security.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/llm/: README.md  gemini_client.py
backend/app/models/: __init__.py  adr.py  base.py  chat_session.py  document.py  embedding.py  marketing.py  meeting.py  minutes_template.py  user.py
backend/app/schemas/: action_item.py  admin.py  agenda.py  ai.py  auth.py  chat.py  document.py  gomeet.py  in_meeting.py  knowledge.py  marketing.py  meeting.py  minutes.py  minutes_template.py  participant.py  project.py  (+4 more)
backend/local_embeddings/: README.md  ingest_local.py  server.py
backend/protos/: vnpt_asr.proto  vnpt_audio.proto
backend/protos_compiled/: vnpt_asr_pb2.py  vnpt_asr_pb2.pyi  vnpt_asr_pb2_grpc.py  vnpt_audio_pb2.py  vnpt_audio_pb2_grpc.py
backend/tests/: README.md  conftest.py  run_smartvoice_streaming.py  selfhost_whisperx_diarize.py  test_audio_ingest_ws.py  test_audio_ws.py  test_ingest_ws.py  ws_in_meeting_intent_action.py  ws_in_meeting_intent_decision.py  ws_in_meeting_intent_risk.py  ws_in_meeting_quick.py
(+324 files in other folders)
